--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title : Lim Kang Ping
-#logo : /assets/D30A8B4E-3765-4E5C-913D-E70132594030.JPG
+#logo : /assets/D30A8B4E-3765-4E5C-913D-E70132594030.JPGg
 #description : text below image
 show download : True
 theme : jekyll-theme-minimal
