--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title : Lim Kang Ping
 logo : /assets/image0-2.jpeg
-#description : text below image
+description : 
 show download : True
 theme : jekyll-theme-minimal
